fix: increase z-index of boxLayout for improved stacking context

--- a/src/pages/homePage/HomePage.module.css
+++ b/src/pages/homePage/HomePage.module.css
@@ -172,7 +172,7 @@
     background-color: var(--secondary-white);
     transition: background-color 0.3s ease;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
-    z-index: 2;
+    z-index: 300;
 }
 
 .btnStyle:hover {
